#ifndef MEMORYTESTER_H
#define MEMORYTESTER_H

#include <QObject>
#include <vector>
#include "types.h"
#include "memorymodel.h"


class MemoryTester : public QObject {
Q_OBJECT
public:
explicit MemoryTester(MemoryModel* mem, QObject* parent = nullptr);
~MemoryTester() override = default;


// blocking call — meant to run in a worker thread
void runTest(TestAlgorithm algo);


signals:
void progress(int percent);
void progressDetail(size_t addr, Word expected, Word read);
void finished(const std::vector<TestResult>& results);


private:
    // Helper methods to reduce code duplication
    void writePattern(size_t addr, Word pattern);
    void readAndVerify(size_t addr, Word expected);
    void updateProgress(size_t current, size_t total, double phasePercent, double basePercent = 0.0);
    
    MemoryModel* _mem;
    std::vector<TestResult> _results;
};
#endif // MEMORYTESTER_H
