@startuml class_diagram
scale 1.5
skinparam {
    shadowing false
    linetype ortho
    classAttributeIconSize 0
    classFontSize 10
    defaultFontSize 10
    padding 1
}

skinparam package {
    BackgroundColor #E8F4F8
    BorderColor #4A90A4
}

skinparam class {
    BackgroundColor #FFF
    BorderColor #333
}

title Диаграмма классов

package "Основные" {
    class MainWindow {
        -_mem: MemoryModel*
        -_worker: TesterWorker*
        -_logger: Logger*
        -_tableMgr: MemoryTableManager*
        -_statsMgr: StatisticsManager*
        -_faultCtrl: FaultController*
        -_testCtrl: TestController*
        -_nav: ResultsNavigator*
        -_themeCtrl: ThemeController*
    }

    class MemoryModel {
        +size(): size_t
        +reset()
        +read(addr): Word
        +write(addr, value)
        +injectFault(fault)
        +dataChanged(begin, end)$
        +faultInjected()$
    }

    class FaultInjector {
        +injectFault(fault)
        +applyFault(addr, value): Word
    }

    class MemoryTester {
        +runTest(algo)
        +progress(percent)$
        +finished(results)$
    }

    class TesterWorker {
        +run(algo)
        +progress(percent)$
        +finished(results)$
    }
}

package "Контроллеры" {
    class FaultController {
        +injectFault()
        +resetMemory()
        +faultInjected()$
        +memoryReset()$
    }

    class TestController {
        +startTest()
        +onTestFinished(results)
        +testStarted()$
        +testFinished(results)$
    }

    class ThemeController {
        +applyTheme(theme)
    }
}

package "Менеджеры" {
    class MemoryTableManager {
        +setTestResults(results)
        +refreshTable(begin, end)
        +setTheme(theme)
    }

    class StatisticsManager {
        +setTestResults(results)
        +updateStatistics()
        +setTheme(theme)
    }

    class ResultsNavigator {
        +scrollToNextFault(results, addr)
    }
}

package "Вспомогательные" {
    class Logger {
        +info(msg)
        +warning(msg)
        +error(msg)
    }

    class DataFormatter {
        +{static} formatBinary(val)
        +{static} getFaultModelName(model)
    }

    class ThemeManager {
        +{static} getColors(theme)
        +{static} getStylesheet(theme)
    }

    class TableItemDelegate {
        +paint(painter, option, index)
        +setTheme(theme)
    }
}

' Composition relationships (ownership)
MainWindow *-- MemoryModel
MainWindow *-- TesterWorker
MainWindow *-- Logger
MainWindow *-- MemoryTableManager
MainWindow *-- StatisticsManager
MainWindow *-- FaultController
MainWindow *-- TestController
MainWindow *-- ResultsNavigator
MainWindow *-- ThemeController
MainWindow --> TableItemDelegate

MemoryModel *-- FaultInjector
TesterWorker *-- MemoryTester

' Core dependencies
TesterWorker --> MemoryModel
MemoryTester --> MemoryModel

' Controller dependencies
FaultController --> MemoryModel
FaultController --> Logger
TestController --> TesterWorker
TestController --> MemoryModel
TestController --> MemoryTableManager
TestController --> Logger
ThemeController --> ThemeManager

' Manager dependencies
MemoryTableManager --> MemoryModel
MemoryTableManager --> Logger
MemoryTableManager --> ThemeManager
StatisticsManager --> MemoryModel
ResultsNavigator --> MemoryModel
ResultsNavigator --> Logger

' UI dependencies
TableItemDelegate --> ThemeManager

@enduml
